--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -11,7 +11,7 @@ on:
 # Authenticate to the the server via ssh
 # and run our deployment script
 jobs:
-  deploy:
+  deploy1:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -21,4 +21,16 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEY }}
-          script: "cd /var/www/agent.innotraveltech.com && ./.scripts/deploy.sh && cd /var/www/nsn.innotraveltech.com && ./.scripts/deploy.sh && cd /var/www/apps.fasttravel.pk && ./.scripts/deploy.sh "
+          script: "cd /var/www/agent.innotraveltech.com && ./.scripts/deploy.sh && cd /var/www/nsn.innotraveltech.com && ./.scripts/deploy.sh && cd /var/www/apps.fasttravel.pk && ./.scripts/deploy.sh"
+
+  deploy2:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST2 }}
+          username: ${{ secrets.USERNAME2 }}
+          key: ${{ secrets.SSHKEY2 }}
+          script: "cd /var/www/agent.airpass.tours && ./.scripts/deploy.sh"
