--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -89,3 +89,14 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYHSTRIP }}
           script: "cd /var/www/agent.hstrip.net && ./.scripts/deploy.sh"
+  deploymyvoiaj:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTMYVOIAJ }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYMYVOIAJ }}
+          script: "cd /var/www/agent.myvoiaj.com && ./.scripts/deploy.sh"
