--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -100,3 +100,14 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYMYVOIAJ }}
           script: "cd /var/www/agent.myvoiaj.com && ./.scripts/deploy.sh"
+  deploynakamura:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTNAKAMURA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYNAKAMURA }}
+          script: "cd /var/www/b2b.nakamura-tour.com && ./.scripts/deploy.sh"
