--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -111,3 +111,14 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYNAKAMURA }}
           script: "cd /var/www/b2b.nakamura-tour.com && ./.scripts/deploy.sh"
+  deployonewagent:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTONEAGENT }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYONEAGENT }}
+          script: "cd /var/www/agent.oneagent.biz && ./.scripts/deploy.sh"
