--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -122,3 +122,14 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYONEAGENT }}
           script: "cd /var/www/agent.oneagent.biz && ./.scripts/deploy.sh"
+  deployeot:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTEOT }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYEOT }}
+          script: "cd /var/www/agent.easyonwardticket.com && ./.scripts/deploy.sh"
