--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -133,3 +133,14 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYEOT }}
           script: "cd /var/www/agent.easyonwardticket.com && ./.scripts/deploy.sh"
+  deploysand:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTSAND }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYSAND }}
+          script: "cd /var/www/sandbox-b2b.myvoiaj.com && ./.scripts/deploy.sh"
