--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -144,3 +144,14 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYSAND }}
           script: "cd /var/www/sandbox-b2b.myvoiaj.com && ./.scripts/deploy.sh"
+  deploysinbd:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTSINBD }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYSINBD }}
+          script: "cd /var/www/agent.sinbadbd.com && ./.scripts/deploy.sh"
