--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -177,3 +177,14 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHUMRAH }}
           script: "cd /var/www/b2b.umrahbooking.com && ./.scripts/deploy.sh"
+  deployrmmtravel:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTRMM }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHRMM }}
+          script: "cd /var/www/b2b.umrahbooking.com && ./.scripts/deploy.sh"
