--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -11,161 +11,161 @@ on:
 # Authenticate to the the server via ssh
 # and run our deployment script
 jobs:
-  deploy1:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTFAST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHFAST }}
-          script: "cd /var/www/apps.fasttravel.pk && ./.scripts/deploy.sh"
+  # deploy1:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTFAST }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHFAST }}
+  #         script: "cd /var/www/apps.fasttravel.pk && ./.scripts/deploy.sh"
 
-  deploy2:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST2 }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEY2 }}
-          script: "cd /var/www/agent.airpass.tours && ./.scripts/deploy.sh"
-  deployakij:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTAKIJ }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEYAKIJ }}
-          script: "cd /var/www/agent.akijair.com && ./.scripts/deploy.sh"
-  deploybuyairticket:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTBUYAIRTICKET }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEYBUYAIRTICKET }}
-          script: "cd /var/www/agent.buyairticket.com && ./.scripts/deploy.sh"
-  deploygofly:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTGOFLY }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEYGOFLY }}
-          script: "cd /var/www/agent.gofly.com.bd && ./.scripts/deploy.sh"
-  deployhstrip:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTHSTRIP }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEYHSTRIP }}
-          script: "cd /var/www/agent.hstrip.net && ./.scripts/deploy.sh"
-  deploymyvoiaj:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTMYVOIAJ }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEYMYVOIAJ }}
-          script: "cd /var/www/agent.myvoiaj.com && ./.scripts/deploy.sh"
-  deploynakamura:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTNAKAMURA }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEYNAKAMURA }}
-          script: "cd /var/www/b2b.nakamura-tour.com && ./.scripts/deploy.sh"
-  deployonewagent:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTONEAGENT }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEYONEAGENT }}
-          script: "cd /var/www/agent.oneagent.biz && ./.scripts/deploy.sh"
-  deploysand:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTSAND }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEYSAND }}
-          script: "cd /var/www/sandbox-b2b.myvoiaj.com && ./.scripts/deploy.sh"
-  deploysinbd:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTSINBD }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEYSINBD }}
-          script: "cd /var/www/agent.sinbadbd.com && ./.scripts/deploy.sh"
-  deploybiggo:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTBIGGO }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEYBIGGO }}
-          script: "cd /var/www/agent.biggo.travel && ./.scripts/deploy.sh"
-  deployumrah:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTUMRAH }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHUMRAH }}
-          script: "cd /var/www/b2b.umrahbooking.com && ./.scripts/deploy.sh"
-  deployrmmtravel:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTRMM }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHRMM }}
-          script: "cd /var/www/agent.rmmtravel.com && ./.scripts/deploy.sh"
+  # deploy2:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOST2 }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHKEY2 }}
+  #         script: "cd /var/www/agent.airpass.tours && ./.scripts/deploy.sh"
+  # deployakij:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTAKIJ }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHKEYAKIJ }}
+  #         script: "cd /var/www/agent.akijair.com && ./.scripts/deploy.sh"
+  # deploybuyairticket:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTBUYAIRTICKET }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHKEYBUYAIRTICKET }}
+  #         script: "cd /var/www/agent.buyairticket.com && ./.scripts/deploy.sh"
+  # deploygofly:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTGOFLY }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHKEYGOFLY }}
+  #         script: "cd /var/www/agent.gofly.com.bd && ./.scripts/deploy.sh"
+  # deployhstrip:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTHSTRIP }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHKEYHSTRIP }}
+  #         script: "cd /var/www/agent.hstrip.net && ./.scripts/deploy.sh"
+  # deploymyvoiaj:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTMYVOIAJ }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHKEYMYVOIAJ }}
+  #         script: "cd /var/www/agent.myvoiaj.com && ./.scripts/deploy.sh"
+  # deploynakamura:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTNAKAMURA }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHKEYNAKAMURA }}
+  #         script: "cd /var/www/b2b.nakamura-tour.com && ./.scripts/deploy.sh"
+  # deployonewagent:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTONEAGENT }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHKEYONEAGENT }}
+  #         script: "cd /var/www/agent.oneagent.biz && ./.scripts/deploy.sh"
+  # deploysand:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTSAND }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHKEYSAND }}
+  #         script: "cd /var/www/sandbox-b2b.myvoiaj.com && ./.scripts/deploy.sh"
+  # deploysinbd:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTSINBD }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHKEYSINBD }}
+  #         script: "cd /var/www/agent.sinbadbd.com && ./.scripts/deploy.sh"
+  # deploybiggo:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTBIGGO }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHKEYBIGGO }}
+  #         script: "cd /var/www/agent.biggo.travel && ./.scripts/deploy.sh"
+  # deployumrah:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTUMRAH }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHUMRAH }}
+  #         script: "cd /var/www/b2b.umrahbooking.com && ./.scripts/deploy.sh"
+  # deployrmmtravel:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTRMM }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHRMM }}
+  #         script: "cd /var/www/agent.rmmtravel.com && ./.scripts/deploy.sh"
   deployorbitgtr:
     runs-on: ubuntu-latest
     steps:
@@ -176,4 +176,4 @@ jobs:
           host: ${{ secrets.HOSTORBIT }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYORBIT }}
-          script: "cd /var/www/orbit.gtrsystem.com && ./.scripts/deploy.sh"
+          script: "cd /var/www/orbit.gtrsystem.com/public/dist && ./.scripts/deploy.sh"
