--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -45,17 +45,17 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYAKIJ }}
           script: "cd /var/www/agent.akijair.com/dist && ./.scripts/deploy.sh"
-  # deploybuyairticket:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTBUYAIRTICKET }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYBUYAIRTICKET }}
-  #         script: "cd /var/www/agent.buyairticket.com && ./.scripts/deploy.sh"
+  deploybuyairticket:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTBUYAIRTICKET }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYBUYAIRTICKET }}
+          script: "cd /var/www/agent.buyairticket.com/dist && ./.scripts/deploy.sh"
   # deploygofly:
   #   runs-on: ubuntu-latest
   #   steps:
