--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -56,17 +56,17 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYBUYAIRTICKET }}
           script: "cd /var/www/agent.buyairticket.com/dist && ./.scripts/deploy.sh"
-  # deploygofly:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTGOFLY }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYGOFLY }}
-  #         script: "cd /var/www/agent.gofly.com.bd && ./.scripts/deploy.sh"
+  deploygofly:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTGOFLY }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYGOFLY }}
+          script: "cd /var/www/agent.gofly.com.bd/dist && ./.scripts/deploy.sh"
   # deployhstrip:
   #   runs-on: ubuntu-latest
   #   steps:
