--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -67,17 +67,17 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYGOFLY }}
           script: "cd /var/www/agent.gofly.com.bd/dist && ./.scripts/deploy.sh"
-  # deployhstrip:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTHSTRIP }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYHSTRIP }}
-  #         script: "cd /var/www/agent.hstrip.net && ./.scripts/deploy.sh"
+  deployhstrip:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTHSTRIP }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYHSTRIP }}
+          script: "cd /var/www/agent.hstrip.net/dist && ./.scripts/deploy.sh"
   # deploymyvoiaj:
   #   runs-on: ubuntu-latest
   #   steps:
