--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -111,17 +111,17 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYONEAGENT }}
           script: "cd /var/www/agent.oneagent.biz/dist && ./.scripts/deploy.sh"
-  # deploysand:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTSAND }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYSAND }}
-  #         script: "cd /var/www/sandbox-b2b.myvoiaj.com && ./.scripts/deploy.sh"
+  deploysand:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTSAND }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYSAND }}
+          script: "cd /var/www/sandbox-b2b.myvoiaj.com/dist && ./.scripts/deploy.sh"
   # deploysinbd:
   #   runs-on: ubuntu-latest
   #   steps:
