--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -133,17 +133,17 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYSINBD }}
           script: "cd /var/www/agent.sinbadbd.com/dist && ./.scripts/deploy.sh"
-  # deploybiggo:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTBIGGO }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYBIGGO }}
-  #         script: "cd /var/www/agent.biggo.travel && ./.scripts/deploy.sh"
+  deploybiggo:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTBIGGO }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYBIGGO }}
+          script: "cd /var/www/agent.biggo.travel/dist && ./.scripts/deploy.sh"
   # deployumrah:
   #   runs-on: ubuntu-latest
   #   steps:
