--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -144,17 +144,17 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYBIGGO }}
           script: "cd /var/www/agent.biggo.travel/dist && ./.scripts/deploy.sh"
-  # deployumrah:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTUMRAH }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHUMRAH }}
-  #         script: "cd /var/www/b2b.umrahbooking.com && ./.scripts/deploy.sh"
+  deployumrah:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTUMRAH }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHUMRAH }}
+          script: "cd /var/www/b2b.umrahbooking.com/dist && ./.scripts/deploy.sh"
   # deployrmmtravel:
   #   runs-on: ubuntu-latest
   #   steps:
